fix: remove extra padding in fenced code blocks (#540)
Closes #539

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -71,7 +71,7 @@
     }
 
     .astro-code code {
-      @apply bg-inherit;
+      @apply bg-inherit p-0;
     }
 
     blockquote {
